fix: scroll on overflow

--- a/public/default-css/modules/layout/main.css
+++ b/public/default-css/modules/layout/main.css
@@ -18,4 +18,5 @@ body {
     border-top-left-radius: 1rem;
     border-top: 1px solid #000;
     border-left: 1px solid #000;
+    overflow-y: auto;
 }
